# gzcom-dll

./: .gitignore  CMakeLists.txt  GZCOM.cpp  GZCOMDirector.h  LICENSE  README.md  RZCOMDirector.cpp  gzcom-dll.sln
gzcom-dll/: Debug.cpp  Debug.h  Framework.h  FrameworkHooks.h  IGZCOM.cpp  IGZCOM.h  RZCOM.cpp  RZCOM.h  Unknown.cpp  Unknown.h  dllmain.cpp  gzcom-dll.cpp  gzcom-dll.h  gzcom-dll.vcxproj  gzcom-dll.vcxproj.filters  gzcom2.vcxproj  gzcom2.vcxproj.filters  stdafx.cpp  stdafx.h
gzcom-dll.xcodeproj/: project.pbxproj
gzcom-dll.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
gzcom-dll/include/: EASTLConfigSC4.h  GZCLSIDDefs.h  GZMSGIDDefs.h  GZServDecls.h  GZServPtrs.h  GZWinKeyAcceleratorUtil.h  PersistResourceKeyFilterBase.h  PersistResourceKeyFilterByInstance.h  PersistResourceKeyFilterByType.h  PersistResourceKeyFilterByTypeAndGroup.h  PersistResourceKeyFilterByTypeAndInstance.h  SC4AppPreferences.h  SC4AudioPreferences.h  SC4CellRegion.h  SC4DebugPreferences.h  SC4GameOptionPreferences.h  SC4HashSet.h  SC4List.h  SC4NewCityPreferences.h  SC4Percentage.h  SC4Point.h  SC4Preferences.h  SC4Rect.h  SC4RegionPreferences.h  SC4SimulatorPreferences.h  SC4String.h  SC4TipOfTheDayPreferences.h  SC4TutorialPreferences.h  SC4TutorialPreferences2.h  SC4UI.h  SC4Vector.h  SC4VideoPreferences.h  SC4ViewPreferences.h  SCLuaUtil.h  SCPropertyUtil.h  StringResourceKey.h  StringResourceManager.h  cGZAllocatorServiceSTLAllocator.h  cGZBufferColorType.h  cGZBufferType.h  (+246 more)
gzcom-dll/src/: SC4UI.cpp  (+29 more)
pedriana/: EmptyPluginCOMDirector.cpp  GZCOM.h  README.md
(+4 files in other folders)
